--- a/contract.yml
+++ b/contract.yml
@@ -1,6 +1,6 @@
 componentVersion: v1.2.1
 type: sw.supervisor
-name: Resinio supervisor
+name: resinio supervisor
 version: '1'
 aliases: []
 tags: []
