--- a/contract.yml
+++ b/contract.yml
@@ -1,6 +1,6 @@
 componentVersion: v1.2.2
 type: sw.supervisor
-name: resinio supervisor
+name: Resinio supervisor
 version: '1'
 aliases: []
 tags: []
